--- a/example/plain-example/master-detail/users.html
+++ b/example/plain-example/master-detail/users.html
@@ -122,10 +122,6 @@
             .then(data => {
                 duice.ObjectProxy.assign(user, data);
                 duice.ObjectProxy.setDisableAll(user, false);
-                duice.ObjectProxy.setReadonly(user, 'name', true);
-
-                // select index in users
-                duice.ArrayProxy.selectItem(users, users.findIndex(it => it.id === user.id));
             });
         }
 
@@ -143,7 +139,7 @@
          * @returns {Promise<void>}
          */
         async function saveUser() {
-            if (!await new duice.ConfirmDialog(`<i class="fa-solid fa-circle-exclamation font-size--x-large"></i><br/>Do you want to save user?`).open()) {
+            if (!await new duice.ConfirmDialog(`<i class="fa-solid fa-circle-question font-size--x-large"></i><br/>Do you want to save user?`).open()) {
                 return;
             }
             let url;
@@ -161,10 +157,15 @@
                 body: JSON.stringify(user)
             }).then(response => response.json())
                 .then(data => {
-                    new duice.AlertDialog('saved ok').open()
+                    new duice.AlertDialog(`<i class="fa-solid fa-circle-exclamation font-size--x-large"></i><br/>saved ok`).open()
                     .then(() => {
-                        duice.ObjectProxy.assign(user, data);
-                        getUsers();
+                        if (user.id) {
+                            duice.ObjectProxy.assign(user, data);
+                            getUsers();
+                        } else {
+                            duice.ObjectProxy.assign(user, data);
+                            getUsers(0);
+                        }
                     });
                 });
         }
@@ -174,15 +175,18 @@
          * @returns {Promise<void>}
          */
         async function deleteUser() {
-            if (!await new duice.ConfirmDialog(`<i class="fa-solid fa-triangle-exclamation font-size--x-large"></i><br/>Do you want to delete user?`).open()) {
+            if (!await new duice.ConfirmDialog(`<i class="fa-solid fa-circle-question font-size--x-large"></i><br/>Do you want to delete user?`).open()) {
                 return;
             }
             fetch(new URL(`/api/users/${user.id}`, location.origin), {
                 method: 'DELETE'
             }).then(() => {
-                duice.ObjectProxy.clear(user);
-                duice.ObjectProxy.setDisableAll(user, true);
-                getUsers();
+                new duice.AlertDialog(`<i class="fa-solid fa-circle-exclamation font-size--x-large"></i><br/>deleted ok`).open()
+                    .then(() => {
+                        duice.ObjectProxy.clear(user);
+                        duice.ObjectProxy.setDisableAll(user, true);
+                        getUsers();
+                    });
             });
         }
 
