--- a/example/plain-example/hub-and-spoke/users.html
+++ b/example/plain-example/hub-and-spoke/users.html
@@ -250,7 +250,7 @@
                     </tr>
                     </thead>
                     <tbody>
-                    <tr data-duice-bind="users" data-duice-loop="user,status">
+                    <tr data-duice-bind="users" data-duice-foreach="user,status">
                         <td class="text-align--center">
                             <span data-duice-bind="user"
                                   data-duice-execute="
