--- a/example/plain-example/master-detail/users.html
+++ b/example/plain-example/master-detail/users.html
@@ -297,7 +297,7 @@
                         </thead>
                         <tbody>
                         <tr data-duice-bind="users"
-                            data-duice-loop="user,status"
+                            data-duice-foreach="user,status"
                             data-duice-execute="this.dataset.id=user.id;"
                             data-duice-selected-item-class="selected"
                             onclick="getUser(this.dataset.id);"
