--- a/public/index.html
+++ b/public/index.html
@@ -28,33 +28,18 @@
         </h2>
         <ul>
             <li>
-                Master Detail Pattern
-                -
-                <a href="/plain-example/master-detail/users.html" target="_blank" class="font-weight--bold">
-                    [Demo]
-                </a>
-                <a href="https://github.com/chomookun/duice-example/tree/main/example/plain-example/master-detail/users.html" target="_blank" class="font-weight--bold">
-                    [Code]
+                <a href="/plain-example/hub-and-spoke.html" target="_blank" class="font-weight--bold">
+                    Hub and Spoke Pattern
                 </a>
             </li>
             <li>
-                Modal Overlay Pattern
-                -
-                <a href="/plain-example/modal-overlay/users.html" target="_blank" class="font-weight--bold">
-                    [Demo]
-                </a>
-                <a href="https://github.com/chomookun/duice-example/tree/main/example/plain-example/modal-overlay/users.html" target="_blank" class="font-weight--bold">
-                    [Code]
+                <a href="/plain-example/master-detail.html" target="_blank" class="font-weight--bold">
+                    Master Detail Pattern
                 </a>
             </li>
             <li>
-                Hub and Spoke Pattern
-                -
-                <a href="/plain-example/hub-and-spoke/users.html" target="_blank" class="font-weight--bold">
-                    [Demo]
-                </a>
-                <a href="https://github.com/chomookun/duice-example/tree/main/example/plain-example/hub-and-spoke/" target="_blank" class="font-weight--bold">
-                    [Code]
+                <a href="/plain-example/modal-overlay.html" target="_blank" class="font-weight--bold">
+                    Modal Overlay Pattern
                 </a>
             </li>
         </ul>
@@ -67,33 +52,18 @@
         </h2>
         <ul>
             <li>
-                Master Detail Pattern
-                -
+                <a href="/plain-example/hub-and-spoke/users.html" target="main" class="font-weight--bold">
+                    Hub and Spoke Pattern
+                </a>
+            </li>
+            <li>
                 <a href="/react-example/master-detail" target="_blank" class="font-weight--bold">
-                    [Demo]
-                </a>
-                <a href="https://github.com/chomookun/duice-example/tree/main/example/plain-example/master-detail/users.html" target="_blank" class="font-weight--bold">
-                    [Code]
+                    Master Detail Pattern
                 </a>
             </li>
             <li>
-                Modal Overlay Pattern
-                -
                 <a href="/plain-example/modal-overlay/users.html" target="_blank" class="font-weight--bold">
-                    [Demo]
-                </a>
-                <a href="https://github.com/chomookun/duice-example/tree/main/example/plain-example/modal-overlay/users.html" target="_blank" class="font-weight--bold">
-                    [Code]
-                </a>
-            </li>
-            <li>
-                Hub and Spoke Pattern
-                -
-                <a href="/plain-example/hub-and-spoke/users.html" target="_blank" class="font-weight--bold">
-                    [Demo]
-                </a>
-                <a href="https://github.com/chomookun/duice-example/tree/main/example/plain-example/hub-and-spoke/" target="_blank" class="font-weight--bold">
-                    [Code]
+                    Modal Overlay Pattern
                 </a>
             </li>
         </ul>
@@ -106,37 +76,23 @@
         </h2>
         <ul>
             <li>
-                Master Detail Pattern
-                -
-                <a href="/vue-example/master-detail" target="_blank" class="font-weight--bold">
-                    [Demo]
-                </a>
-                <a href="https://github.com/chomookun/duice-example/tree/main/example/plain-example/master-detail/users.html" target="_blank" class="font-weight--bold">
-                    [Code]
-                </a>
-            </li>
-            <li>
-                Modal Overlay Pattern
-                -
-                <a href="/plain-example/modal-overlay/users.html" target="_blank" class="font-weight--bold">
-                    [Demo]
-                </a>
-                <a href="https://github.com/chomookun/duice-example/tree/main/example/plain-example/modal-overlay/users.html" target="_blank" class="font-weight--bold">
-                    [Code]
-                </a>
-            </li>
-            <li>
-                Hub and Spoke Pattern
-                -
                 <a href="/plain-example/hub-and-spoke/users.html" target="_blank" class="font-weight--bold">
-                    [Demo]
+                    Hub and Spoke Pattern
                 </a>
-                <a href="https://github.com/chomookun/duice-example/tree/main/example/plain-example/hub-and-spoke/" target="_blank" class="font-weight--bold">
-                    [Code]
+            </li>
+            <li>
+                <a href="/vue-example/master-detail" target="_blank" class="font-weight--bold">
+                    Master Detail Pattern
+                </a>
+            </li>
+            <li>
+                <a href="/plain-example/modal-overlay/users.html" target="_blank" class="font-weight--bold">
+                    Modal Overlay Pattern
                 </a>
             </li>
         </ul>
     </section>
+    <iframe name="main" src="about:blank" width="600" height="400"></iframe>
 </main>
 </body>
 </html>
