--- a/example/plain-example/hub-and-spoke-detail.html
+++ b/example/plain-example/hub-and-spoke-detail.html
@@ -7,10 +7,10 @@
     <meta http-equiv="expires" content="0">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
-    <title>Users</title>
-    <script src="/static/duice/duice.js"></script>
-    <link rel="stylesheet" href="/static/duice/duice.css"/>
-    <link rel="stylesheet" href="/static/duice/duice-theme.css"/>
+    <title>Hub And Spoke Pattern Detail</title>
+    <script src="https://unpkg.com/duice/dist/duice.js"></script>
+    <link rel="stylesheet" href="https://unpkg.com/duice/dist/duice.css"/>
+    <link rel="stylesheet" href="https://unpkg.com/duice/dist/duice-theme.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
@@ -34,6 +34,7 @@
     </style>
     <script>
         // defines
+        const userId = new URL(location.href).searchParams.get('id');
         const user = new duice.ObjectProxy({});
 
         /**
@@ -108,19 +109,11 @@
             });
         }
 
-        // on dom document loaded
+        // on DOM content loaded
         document.addEventListener('DOMContentLoaded', () => {
-            const urlSearchParams = new URLSearchParams(location.search);
-            if (urlSearchParams.has('id')) {
-                getUser(urlSearchParams.get('id'));
+            if (userId) {
+                getUser(userId);
             }
-        });
-
-        // history event
-        ['popstate', 'pageshow'].forEach(event => {
-            window.addEventListener(event, () => {
-                document.dispatchEvent(new CustomEvent('DOMContentLoaded'));
-            });
         });
     </script>
 </head>
