--- a/example/plain-example/hub-and-spoke.html
+++ b/example/plain-example/hub-and-spoke.html
@@ -7,10 +7,10 @@
     <meta http-equiv="expires" content="0">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
-    <title>Users</title>
-    <script src="/static/duice/duice.js"></script>
-    <link rel="stylesheet" href="/static/duice/duice.css"/>
-    <link rel="stylesheet" href="/static/duice/duice-theme.css"/>
+    <title>Hub And Spoke Pattern</title>
+    <script src="https://unpkg.com/duice/dist/duice.js"></script>
+    <link rel="stylesheet" href="https://unpkg.com/duice/dist/duice.css"/>
+    <link rel="stylesheet" href="https://unpkg.com/duice/dist/duice-theme.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
@@ -90,7 +90,7 @@
          * @param id
          */
         function getUser(id) {
-            location.href = `user.html?id=${id}`;
+            location.href = `hub-and-spoke-detail.html?id=${id}`;
         }
 
         /**
@@ -132,13 +132,6 @@
         document.addEventListener('DOMContentLoaded', () => {
             loadUrlSearchParams();
             getUsers();
-        });
-
-        // history event
-        ['popstate', 'pageshow'].forEach(event => {
-            window.addEventListener(event, () => {
-                document.dispatchEvent(new CustomEvent('DOMContentLoaded'));
-            });
         });
     </script>
 </head>
