--- a/example/plain-example/master-detail.html
+++ b/example/plain-example/master-detail.html
@@ -7,10 +7,10 @@
     <meta http-equiv="expires" content="0">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
-    <title>Users</title>
-    <script src="/static/duice/duice.js"></script>
-    <link rel="stylesheet" href="/static/duice/duice.css"/>
-    <link rel="stylesheet" href="/static/duice/duice-theme.css"/>
+    <title>Master Detail Pattern</title>
+    <script src="https://unpkg.com/duice/dist/duice.js"></script>
+    <link rel="stylesheet" href="https://unpkg.com/duice/dist/duice.css"/>
+    <link rel="stylesheet" href="https://unpkg.com/duice/dist/duice-theme.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
